[gd_scene load_steps=13 format=3 uid="uid://dbibl1x78rnnp"]

[ext_resource type="Script" path="res://src/entities/enemies/Cockroach.gd" id="1_pu8oi"]
[ext_resource type="PackedScene" uid="uid://d31bhq6kvx634" path="res://src/screens/gui/Healthbar.tscn" id="2_r6vau"]
[ext_resource type="Shader" path="res://src/shaders/flash.gdshader" id="3_1ku0b"]
[ext_resource type="Script" path="res://src/components/HealthComponent.gd" id="3_xvqk6"]
[ext_resource type="Script" path="res://src/components/HitboxComponent.gd" id="4_1fut1"]
[ext_resource type="Texture2D" uid="uid://cqe3hw71s83a8" path="res://assets/textures/cockroach/cockroach-pixel.png" id="4_d1q2j"]
[ext_resource type="PackedScene" uid="uid://sp5n5keq64rl" path="res://src/components/DamageableSpriteComponent.tscn" id="6_8yk4v"]
[ext_resource type="PackedScene" uid="uid://dj84r3r8qy3hy" path="res://src/components/HitAudioComponent.tscn" id="9_w766q"]
[ext_resource type="AudioStream" uid="uid://d12c2qm73tt5k" path="res://assets/audio/sfx/cockroach_hit.wav" id="10_ok24r"]

[sub_resource type="CircleShape2D" id="CircleShape2D_qwj7i"]
radius = 15.0

[sub_resource type="CircleShape2D" id="CircleShape2D_yk0af"]
radius = 9.0

[sub_resource type="CircleShape2D" id="CircleShape2D_7g1id"]
radius = 108.0

[node name="Cockroach" type="CharacterBody2D"]
visibility_layer = 8
position = Vector2(0, -9)
collision_layer = 8
collision_mask = 985
motion_mode = 1
slide_on_ceiling = false
script = ExtResource("1_pu8oi")
speed = 150.0
damage_amount = 5

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("4_d1q2j")

[node name="HealthBar" parent="." instance=ExtResource("2_r6vau")]
offset_left = -16.0
offset_top = -20.0
offset_right = 16.0
offset_bottom = -16.0
MAX_VALUE = 50

[node name="HealthComponent" type="Node2D" parent="."]
script = ExtResource("3_xvqk6")
MAX_HEALTH = 50

[node name="DamageableSpriteComponent" parent="." node_paths=PackedStringArray("sprite") instance=ExtResource("6_8yk4v")]
hit_shader = ExtResource("3_1ku0b")
sprite = NodePath("../Sprite2D")

[node name="HitAudioComponent" parent="." instance=ExtResource("9_w766q")]
hit_sound = ExtResource("10_ok24r")

[node name="HitboxComponent" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 131
script = ExtResource("4_1fut1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitboxComponent"]
shape = SubResource("CircleShape2D_qwj7i")

[node name="AttackRate" type="Timer" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_yk0af")

[node name="DetectionArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
shape = SubResource("CircleShape2D_7g1id")
debug_color = Color(0.954771, 0.185129, 0.278565, 0.42)

[connection signal="died" from="HealthComponent" to="." method="health_depleted"]
[connection signal="health_changed" from="HealthComponent" to="HealthBar" method="_set_health"]
[connection signal="area_entered" from="HitboxComponent" to="." method="_on_hitbox_area_entered"]
[connection signal="area_exited" from="HitboxComponent" to="." method="_on_hitbox_area_exited"]
[connection signal="damage" from="HitboxComponent" to="DamageableSpriteComponent" method="play_animation"]
[connection signal="damage" from="HitboxComponent" to="HitAudioComponent" method="play_hit_sound"]
[connection signal="damaged" from="HitboxComponent" to="HealthComponent" method="take_damage"]
[connection signal="timeout" from="AttackRate" to="." method="attack_target"]
[connection signal="area_entered" from="DetectionArea" to="." method="_on_detection_area_area_entered"]
[connection signal="area_exited" from="DetectionArea" to="." method="_on_detection_area_area_exited"]
